Newst version as of 14.03.2018

--- a/original_data.html
+++ b/original_data.html
@@ -57,8 +57,8 @@ Each cohort includes individuals who entered unemployment in a specific month.
 Having the time of getting unemployed as a starting point, the interviews of the
 main waves took place 2, 12, and 36 months after the individuals&#8217; initial unemployment spell,
 while the interim wave was after 6 months between wave 1 and wave 2. The questionnaires in the
-three main waves cover two parts: a cross-sectional part (&#8220;[]w_qs.dta&#8221;), which is related to the time of the
-interview, and a longitudinal part (&#8220;[]w_ls.dta&#8221;), where individuals give a retrospective view on their
+three main waves cover two parts: a cross-sectional part (&#8220;[ ]_qs.dta&#8221;), which is related to the time of the
+interview, and a longitudinal part (&#8220;[ ]_ls.dta&#8221;), where individuals give a retrospective view on their
 employment history starting either from the last interview or, in case of wave 1, from the
 entry into unemployment which also defines to which cohort they belong to. There is no longitudinal part for the interim wave.
 The files in the folder are as follows:</p>
